hphp/hack/test/typecheck/iface_require_incompat4.php.exp
File "iface_require_incompat4.php", line 4, characters 10-11:
Member x has the wrong type (Typing[4341])
File "iface_require_incompat4.php", line 4, characters 10-11:
Typing error
File "iface_require_incompat4.php", line 12, characters 25-29:
Expected float
File "iface_require_incompat4.php", line 4, characters 11-11:
  via this generic T
File "iface_require_incompat4.php", line 8, characters 25-27:
But got int
File "iface_require_incompat4.php", line 4, characters 11-11:
  via this generic T
